--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,22 +1,54 @@
 .row {
 
-	@mixin clearFix;
+  @mixin clearfix;
+
+  &--gutters {
+    margin-right: -65px;
+  }
+  
+  &--gutters-large{
+	margin-right:-100px;
+  }
+  &--gutters-large > div {
+	padding-right: 100px;
+  }
+  &--gutters > div {
+    padding-right: 65px;
+  }
+
+  &__b-margin-until-medium {
+    margin-bottom: 1rem;
+  }
+
+  @mixin atMedium {
+
+    &__b-margin-until-medium {
+      margin-bottom: 0;
+    }
+
+    &__medium-4 {
+      float: left;
+      width: 33.33%;
+    }
+
+    &__medium-4--larger {
+      width: 37%;
+    }
 	
-	&&--gutters{
-		margin-right:-65px;
+	&__medium-6{
+		float: left;
+		width:50%;
 	}
-	&--gutters > div{
-		padding-right: 65px;
-	}
-	@mixin atMedium{
-		&__medium-4{
-			float:left;
-			width: 33.3%;
-		}
-		&__medium-8{
-			float:left;
-			width:66.6%;
-		}
-	}
+
+    &__medium-8 {
+      float: left;
+      width: 66.66%;
+    }
+
+    &__medium-8--smaller {
+      width: 63%;
+    }
+  }
+  
 
 }
